add necessary grid system and basic styles

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,3 +1,9 @@
 // Make sure the charset is set appropriately
 
 @charset "UTF-8";
+
+@import "compass/reset";
+@import "partials/mediaqueries";
+@import "partials/grid";
+@import "partials/mixins";
+@import "partials/general";
