--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -6,9 +6,9 @@
 	padding-top: 20px;
 	margin-bottom: 15px;
 	.nav-logo {
-		font-size: 5.5rem;
+		font-size: 3.2rem;
 		position: relative;
-		bottom: -18px;
+		bottom: -38px;
 	}
 }
 .main-nav {
@@ -16,6 +16,7 @@
 	height: 100%;
 	position: relative;
 	bottom:-1px;
+	padding: 0 20px;
 	ul li {
 		display: inline-block;
 		position: relative;
@@ -52,6 +53,43 @@
 					border-style: solid;
 					border-width: 65px 25px 0 0;
 					border-color: $dark transparent transparent transparent;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 640px) {
+	.main-nav-wrapper .nav-logo {
+		bottom: 0px;
+		padding: 0 20px; 
+	}
+
+	.main-nav {
+		float: none;
+		padding: 0;
+		ul li {
+			width: 32%;
+			text-align: center;
+			&:first-child {
+				padding-left: 10px;
+			}
+			a {
+				display: block;
+				width:100%;
+				height:100%;
+				padding: 25px 20px;
+				color: $dark;
+				font-weight: bold;
+				font-size: 1.5rem;
+				text-transform: uppercase;
+				&:hover {
+					&:before {
+						display: none;
+					}
+					&:after {
+						display: none;
+					}
 				}
 			}
 		}
