--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -29,32 +29,32 @@
 			font-weight: bold;
 			font-size: 1.5rem;
 			text-transform: uppercase;
-			&:hover {
-				background-color: $dark;
-				color: $white;
-				&:before {
-					content: '';
-					position: absolute;
-					top: 0;
-					left: -25px;
-					width: 0;
-					height: 0;
-					border-style: solid;
-					border-width: 0 0 65px 25px;
-					border-color: transparent transparent $dark transparent;
-				}
-				&:after {
-					content: '';
-					position: absolute;
-					top: 0;
-					right: -25px;
-					width: 0;
-					height: 0;
-					border-style: solid;
-					border-width: 65px 25px 0 0;
-					border-color: $dark transparent transparent transparent;
-				}
-			}
+		}
+	}
+	li.current-menu-item a, li a:hover {
+		background-color: $dark;
+		color: $white;
+		&:before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: -25px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 0 0 65px 25px;
+			border-color: transparent transparent $dark transparent;
+		}
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: -25px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 65px 25px 0 0;
+			border-color: $dark transparent transparent transparent;
 		}
 	}
 }
@@ -83,14 +83,14 @@
 				font-weight: bold;
 				font-size: 1.5rem;
 				text-transform: uppercase;
-				&:hover {
-					&:before {
-						display: none;
-					}
-					&:after {
-						display: none;
-					}
-				}
+			}
+		}
+		li.current-menu-item a, li a:hover {
+			&:before {
+				display: none;
+			}
+			&:after {
+				display: none;
 			}
 		}
 	}
