--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -130,7 +130,7 @@ ul{
   position: relative;
   overflow: hidden;
   border:4px solid $dark;
-  max-width:300px;
+  width:30%;
   max-height:250px;
   display:inline-block;
 }
@@ -166,6 +166,6 @@ ul{
 } 
 
 .related-project div:hover > h5{
-  transform: translateY(-165px);
+  transform: translateY(-115px);
   opacity:1;
 }
