build out homepage/work page

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -9,4 +9,4 @@
 @import "partials/general";
 @import "partials/nav";
 @import "partials/footer";
-@import "partials/component";
+@import "partials/work";
