--- a/scss/partials/_work.scss
+++ b/scss/partials/_work.scss
@@ -63,6 +63,7 @@
 		border-right: 5px solid $dark;
 		text-align: center;
 		position: relative;
+		overflow: hidden;
 		h1 {
 			width: 100%;
 			height: 20%;
